--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -22,5 +22,7 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
 		<filter-name>charConfig</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-  
+     <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
 </web-app>
